<resources>
    <string name="app_name">Learning English Project UAS</string>
    <string name="textJudul">Member List</string>
    <string name="imageDeskripsi">Gambar</string>
    <string name="textNama">Member Name</string>
    <string name="textNPM">Member NPM</string>

    <string name="textJudul2">Alphabets</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="imageDeskripsi2">Gambar2</string>
    <string name="btnsuara">Voice</string>

    <string name="textJudul3">Fruits</string>
    <string name="txtFruit">Fruit Name</string>
    <string name="imageDeskripsi3">Gambar3</string>
    <string name="btnsuara2">Voice</string>
</resources>