<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/teal_200"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_item_foto2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/imageDeskripsi3"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/img_item_foto2"
        android:layout_toEndOf="@id/img_item_foto2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_nama2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/txtFruit"
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_suara2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnsuara2"
            android:textColor="@color/black"
            android:backgroundTint="@color/B"/>

    </LinearLayout>
</RelativeLayout>