<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/teal_200"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/img_item_foto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/imageDeskripsi"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_toEndOf="@id/img_item_foto"
        android:layout_toRightOf="@id/img_item_foto"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:text="@string/textNama"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_npm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/textNPM"
            android:textSize="14dp"
            android:textStyle="normal" />

    </LinearLayout>
</RelativeLayout>